# photo-archive

./: .gitignore  Cargo.toml  parc  parc.py  pyproject.toml  readme.md
parc/: cli.py  photos.py
src/: main.rs
src/commands/: archive.rs  check.rs  mod.rs
tests/: test_cli.py
