[tool.poetry]
name = "parc"
version = "0.1.0"
description = "Photo ARChive - A simple photo archive tool"
authors = ["rsmb <rsmbryson@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "*"

[tool.poetry.scripts]
parc = "parc.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
